--- a/games/dino-runner.html
+++ b/games/dino-runner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Space Invaders - Masked Gradients Demo</title>
+  <title>Dino Runner - Game of Life Arcade</title>
   <style>
     body {
       margin: 0;
@@ -19,6 +19,6 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-  <script type="module" src="/examples/space-invaders-gradient.js"></script>
+  <script type="module" src="/games/dino-runner.js"></script>
 </body>
 </html>
