--- a/LifeArcade/public/installation.html
+++ b/LifeArcade/public/installation.html
@@ -57,14 +57,14 @@
     import { IframeComm } from './src/installation/IframeComm.js'
 
     // ===== IMPORT SCREENS =====
-    import { IdleScreen } from './src/screens/IdleScreen.v2.js'
-    import { WelcomeScreen } from './src/screens/WelcomeScreen.v2.js'
-    import { GalleryScreen } from './src/screens/GalleryScreen.v2.js'
-    import { CodeAnimationScreen } from './src/screens/CodeAnimationScreen.v2.js'
+    import { IdleScreen } from './src/screens/IdleScreen.js'
+    import { WelcomeScreen } from './src/screens/WelcomeScreen.js'
+    import { GalleryScreen } from './src/screens/GalleryScreen.js'
+    import { CodeAnimationScreen } from './src/screens/CodeAnimationScreen.js'
     import { GameScreen } from './src/screens/GameScreen.js'
-    import { ScoreEntryScreen } from './src/screens/ScoreEntryScreen.v2.js'
-    import { LeaderboardScreen } from './src/screens/LeaderboardScreen.v2.js'
-    import { QRCodeScreen } from './src/screens/QRCodeScreen.v2.js'
+    import { ScoreEntryScreen } from './src/screens/ScoreEntryScreen.js'
+    import { LeaderboardScreen } from './src/screens/LeaderboardScreen.js'
+    import { QRCodeScreen } from './src/screens/QRCodeScreen.js'
 
     console.log('=== GAME OF LIFE ARCADE - Physical Installation ===')
     console.log('Initializing...')
