--- a/LifeArcade/installation.html
+++ b/LifeArcade/installation.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game of Life Arcade - Physical Installation</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500&family=Google+Sans+Mono:wght@400;600&family=Google+Sans+Flex:wght@400;500&display=swap" rel="stylesheet">
+
   <style>
     /* ===== RESET & BASE ===== */
     * {
@@ -32,6 +38,22 @@
       to { opacity: 0; }
     }
 
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes blink {
+      0%, 50% { opacity: 1; }
+      51%, 100% { opacity: 0; }
+    }
+
     /* ===== SCREEN CONTAINER ===== */
     #app-container {
       width: 100%;
@@ -57,14 +79,14 @@
     import { IframeComm } from './src/installation/IframeComm.js'
 
     // ===== IMPORT SCREENS =====
-    import { IdleScreen } from './src/screens/IdleScreen.v2.js'
-    import { WelcomeScreen } from './src/screens/WelcomeScreen.v2.js'
-    import { GalleryScreen } from './src/screens/GalleryScreen.v2.js'
-    import { CodeAnimationScreen } from './src/screens/CodeAnimationScreen.v2.js'
+    import { IdleScreen } from './src/screens/IdleScreen.js'
+    import { WelcomeScreen } from './src/screens/WelcomeScreen.js'
+    import { GalleryScreen } from './src/screens/GalleryScreen.js'
+    import { CodeAnimationScreen } from './src/screens/CodeAnimationScreen.js'
     import { GameScreen } from './src/screens/GameScreen.js'
-    import { ScoreEntryScreen } from './src/screens/ScoreEntryScreen.v2.js'
-    import { LeaderboardScreen } from './src/screens/LeaderboardScreen.v2.js'
-    import { QRCodeScreen } from './src/screens/QRCodeScreen.v2.js'
+    import { ScoreEntryScreen } from './src/screens/ScoreEntryScreen.js'
+    import { LeaderboardScreen } from './src/screens/LeaderboardScreen.js'
+    import { QRCodeScreen } from './src/screens/QRCodeScreen.js'
 
     console.log('=== GAME OF LIFE ARCADE - Physical Installation ===')
     console.log('Initializing...')
