--- a/LifeArcade/installation.html
+++ b/LifeArcade/installation.html
@@ -5,12 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game of Life Arcade - Physical Installation</title>
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500&family=Google+Sans+Mono:wght@400;600&family=Google+Sans+Flex:wght@400;500&display=swap" rel="stylesheet">
-
   <style>
+    /* ===== LOCAL FONTS (Offline) ===== */
+    @font-face {
+      font-family: 'Google Sans Flex';
+      font-weight: 500;
+      font-style: normal;
+      font-display: swap;
+      src: url('/fonts/GoogleSansFlex-VariableFont_GRAD,ROND,opsz,slnt,wdth,wght.ttf') format('truetype');
+    }
+
+    @font-face {
+      font-family: 'Google Sans Mono';
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+      src: url('/fonts/Google-Sans-Mono-Regular.ttf') format('truetype');
+    }
+
+    @font-face {
+      font-family: 'Google Sans Mono';
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+      src: url('/fonts/Google-Sans-Mono-SemiBold.ttf') format('truetype');
+    }
+
     /* ===== RESET & BASE ===== */
     * {
       margin: 0;
@@ -19,7 +39,7 @@
     }
 
     body {
-      font-family: 'Google Sans', Arial, sans-serif;
+      font-family: 'Google Sans Flex', Arial, sans-serif;
       background-color: #FFFFFF;
       color: #202124;
       overflow: hidden;
@@ -67,8 +87,8 @@
   <!-- Main app container - screens will be injected here -->
   <div id="app-container"></div>
 
-  <!-- p5.js for IdleScreen GoL animation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+  <!-- p5.js (Local - Offline) -->
+  <script src="/lib/p5.min.js"></script>
 
   <!-- Main initialization script -->
   <script type="module">
