--- a/LifeArcade/public/games/game-wrapper.html
+++ b/LifeArcade/public/games/game-wrapper.html
@@ -5,6 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game - Life Arcade</title>
   <style>
+    /* ===== LOCAL FONTS (Offline) ===== */
+    @font-face {
+      font-family: 'Google Sans Flex';
+      font-weight: 500;
+      font-style: normal;
+      font-display: swap;
+      src: url('/fonts/GoogleSansFlex-VariableFont_GRAD,ROND,opsz,slnt,wdth,wght.ttf') format('truetype');
+    }
+
+    @font-face {
+      font-family: 'Google Sans Mono';
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+      src: url('/fonts/Google-Sans-Mono-Regular.ttf') format('truetype');
+    }
+
+    @font-face {
+      font-family: 'Google Sans Mono';
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+      src: url('/fonts/Google-Sans-Mono-SemiBold.ttf') format('truetype');
+    }
+
     body {
       margin: 0;
       padding: 0;
@@ -13,13 +38,14 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      font-family: 'Google Sans', Arial, sans-serif;
+      font-family: 'Google Sans Flex', Arial, sans-serif;
       overflow: hidden;
     }
   </style>
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
+  <!-- p5.js (Local - Offline) -->
+  <script src="/lib/p5.min.js"></script>
   <script type="module">
     // Get game name from URL parameter
     const urlParams = new URLSearchParams(window.location.search)
