--- a/Web/games/dino-runner-mobile/index.html
+++ b/Web/games/dino-runner-mobile/index.html
@@ -33,7 +33,8 @@
     #game-container {
       position: relative;
       width: 100vw;
-      height: 100vh;
+      height: 100vh;   /* Fallback for older browsers */
+      height: 100dvh;  /* Dynamic viewport height - iOS Safari 15.4+ */
       display: flex;
       align-items: center;
       justify-content: center;
