--- a/LifeArcade/installation.html
+++ b/LifeArcade/installation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,13 +50,23 @@
 
     /* ===== GLOBAL ANIMATIONS ===== */
     @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
     }
 
     @keyframes fadeOut {
-      from { opacity: 1; }
-      to { opacity: 0; }
+      from {
+        opacity: 1;
+      }
+
+      to {
+        opacity: 0;
+      }
     }
 
     @keyframes slideUp {
@@ -63,6 +74,7 @@
         opacity: 0;
         transform: translateY(20px);
       }
+
       to {
         opacity: 1;
         transform: translateY(0);
@@ -70,8 +82,16 @@
     }
 
     @keyframes blink {
-      0%, 50% { opacity: 1; }
-      51%, 100% { opacity: 0; }
+
+      0%,
+      50% {
+        opacity: 1;
+      }
+
+      51%,
+      100% {
+        opacity: 0;
+      }
     }
 
     /* ===== SCREEN CONTAINER ===== */
@@ -83,7 +103,17 @@
     }
   </style>
 </head>
+
 <body>
+  <!-- Video Background Layer (Global) -->
+  <div id="video-background-layer"
+    style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: #000000;">
+    <video id="bg-video-idle" src="/videos/idle.mp4" loop muted playsinline
+      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: opacity 0.8s ease;"></video>
+    <video id="bg-video-loop" src="/videos/loop.mp4" loop muted playsinline
+      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: opacity 0.8s ease;"></video>
+  </div>
+
   <!-- Main app container - screens will be injected here -->
   <div id="app-container"></div>
 
@@ -147,9 +177,60 @@
     // ===== CURRENT SCREEN TRACKING =====
     let currentScreenName = null
 
+    // ===== VIDEO CONTROL =====
+    function updateVideoBackground(screenName) {
+      const vidIdle = document.getElementById('bg-video-idle')
+      const vidLoop = document.getElementById('bg-video-loop')
+
+      if (!vidIdle || !vidLoop) return
+
+      // Helper to play if paused
+      const ensurePlaying = (vid) => {
+        if (vid.paused) vid.play().catch(e => console.log('Auto-play prevented:', e))
+      }
+
+      // Helper to pause after transition (saves resources)
+      const pauseAfterTransition = (vid) => {
+        setTimeout(() => {
+          // Only pause if it's still hidden (opacity is 0)
+          if (vid.style.opacity === '0') {
+            vid.pause()
+          }
+        }, 1000) // Wait for 0.8s transition + buffer
+      }
+
+      if (screenName === 'idle' || screenName === 'idle-leaderboard') {
+        // Idle Screens: Show idle video
+        ensurePlaying(vidIdle)
+        vidIdle.style.opacity = '1'
+
+        vidLoop.style.opacity = '0'
+        pauseAfterTransition(vidLoop)
+
+      } else if (screenName === 'code' || screenName === 'game') {
+        // Code & Game Screens: Hide ALL videos (opaque background)
+        vidIdle.style.opacity = '0'
+        vidLoop.style.opacity = '0'
+
+        pauseAfterTransition(vidIdle)
+        pauseAfterTransition(vidLoop)
+
+      } else {
+        // All other screens: Show loop video
+        ensurePlaying(vidLoop)
+        vidLoop.style.opacity = '1'
+
+        vidIdle.style.opacity = '0'
+        pauseAfterTransition(vidIdle)
+      }
+    }
+
     // ===== SCREEN TRANSITION HANDLER =====
     function handleScreenChange(newScreenName) {
       console.log(`Screen transition: ${currentScreenName} → ${newScreenName}`)
+
+      // Update video background
+      updateVideoBackground(newScreenName)
 
       // Hide current screen
       if (currentScreenName && screens[currentScreenName]) {
@@ -198,4 +279,5 @@
     console.log('Press SPACE to begin')
   </script>
 </body>
+
 </html>
